# crm-example

./: .env.example  .gitattributes  .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260226_001_create_users_and_sessions.py  20260226_002_create_profiles_avatars.py  20260227_002_session_activity_columns.py  20260227_003_add_user_role_buyer.py  20260227_004_create_campaigns_table.py  20260227_005_create_ad_groups_table.py  20260227_006_create_creatives_table.py  20260227_007_create_column_configurations_table.py  20260302_001_blog_posts.py  20260302_002_blog_slugs_seo.py
backend/scripts/: migrate.sh  start.sh
backend/src/api/: admin.py  auth.py  blog.py  campaign.py  column_config.py  dashboard.py  profile.py
backend/src/app/: __init__.py  main.py
backend/src/core/: __init__.py  auth.py  database.py  logging.py  session_cache.py  settings.py  slug.py  storage.py
backend/src/models/: __init__.py  ad_group.py  avatar.py  base.py  blog_post.py  blog_slug_history.py  campaign.py  column_config.py  creative.py  profile.py  session.py  user.py
backend/src/schemas/: admin.py  auth.py  blog.py  campaign.py  dashboard.py  profile.py
backend/src/scripts/: migrate_blog_slugs.py  rebuild_search_index.py  seed_admin.py
backend/src/services/: ad_group_service.py  auth_service.py  avatar_service.py  blog_search_service.py  blog_service.py  campaign_service.py  column_config_service.py  (+3 more)
backend/tests/: conftest.py  test_blog_api.py  test_campaign_create_with_ad_groups.py
(+274 files in other folders)
